# flowix-share-server

./: pyproject.toml  requirements.txt
flowix_share_server/: .flowix.share.server.db  __init__.py  __main__.py
flowix_share_server/assets/: board.css  board.js  login.css  login.js  register.css  register.js
flowix_share_server/templates/: base.html  board.html  login.html  register.html
